--- a/src/app/pages/guest-management/guest-management.component.html
+++ b/src/app/pages/guest-management/guest-management.component.html
@@ -1,89 +1,129 @@
-
-<div class="container">
-    
-    <div class="page-content">
-        <h1>QUẢN LÍ KHÁCH HÀNG</h1>
-        <div id="btnThem">
-            <a routerLink="new-account">
-                <button type="button" class="btn btn-primary">Thêm tài khoản</button>
-            </a>
-        </div>
-
-        <div class="form">
-            <div class="row g-3">
-                <div class="col-lg-2 col-md-2" id="TimKiem">
-                    <label for="select">Tìm kiếm</label>
-                </div>
-                <div class="col-lg-3 col-md-7">
-                    <select class="form-select" aria-label="Default select example" id="select">
-                        <option selected value="HoTen">Họ Tên</option>
-                        <option value="MaKH">Mã Khách Hàng</option>
-                        <option value="Phai">Phái</option>
-                        <option value="Gmail">Gmail</option>
-                        <option value="MaChuyen">Mã chuyến</option>
-                        <option value="MaVe">Mã vé</option>
-                    </select>
-                </div>
-                <div class="col-lg-5 col-md-6">
-                    <input type="text" class="form-control" id="search">
-                </div>
-                <div class="col-lg-2 col-md-3" id="btnTimKiem">
-                    <button type="button" class="btn btn-primary">Tìm kiếm</button>
-                </div>
-            </div>
-        </div>
-        
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
-            <ng-container matColumnDef="id_guest">
-                <th mat-header-cell *matHeaderCellDef> Mã khách hàng </th>
-                <td mat-cell *matCellDef="let element"> {{element.id_guest}} </td>
-              </ng-container>
-            
-              <ng-container matColumnDef="full_name">
-                <th mat-header-cell *matHeaderCellDef> Họ và tên </th>
-                <td mat-cell *matCellDef="let element"> {{element.full_name}} </td>
-              </ng-container>
-            
-              <ng-container matColumnDef="gender">
-                <th mat-header-cell *matHeaderCellDef> Phái </th>
-                <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
-              </ng-container>
-            
-              <ng-container matColumnDef="gmail">
-                <th mat-header-cell *matHeaderCellDef> Gmail </th>
-                <td mat-cell *matCellDef="let element"> {{element.gmail}} </td>
-              </ng-container>
-
-              <ng-container matColumnDef="id_flight">
-                <th mat-header-cell *matHeaderCellDef> Mã chuyến </th>
-                <td mat-cell *matCellDef="let element"> {{element.id_flight}} </td>
-              </ng-container>
-
-              <ng-container matColumnDef="id_ticket">
-                <th mat-header-cell *matHeaderCellDef> Mã vé </th>
-                <td mat-cell *matCellDef="let element"> {{element.id_ticket}} </td>
-              </ng-container>
-          
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          </table>
-        <nav aria-label="Page navigation example" class="PageNavi">
-            <ul class="pagination">
-                <li class="page-item">
-                    <a class="page-link" href="#">
-                        <span aria-hidden="true">«</span>
-                    </a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Next">
-                        <span aria-hidden="true">»</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
+<!-- <div class="container">
+    <div class="admin-nav">
+        <app-admin-navigation></app-admin-navigation>
     </div>
-</div>
+    <div class="page-content"> -->
+        <div class="page-title">
+            QUẢN LÝ CHUYẾN BAY
+        </div>
+            <button class="add-flight">Thêm chuyến bay</button>
+            <div class="flight-filter-form">
+                <form>
+                    <div class="form-field">
+                        <label for="departure-location">Nơi xuất phát</label><br>
+                        <select name="arrival-location" id="arrival-location">
+                            <option value=""></option>
+                            <option value="TPHCM">TPHCM</option>
+                            <option value="TPHCM2">TPHCM2</option>
+                            <option value="TPHCM3">TPHCM3</option>
+                            <option value="TPHCM4">TPHCM4</option>
+                            <option value="TPHCM5">TPHCM5</option>
+                        </select>
+                    </div>
+                    <div class="form-field">
+                        <label for="departure-date">Ngày xuất phát</label><br>
+                        <input type="date" id="departure-date" name="departure-date" class="datepicker-box"><br></div>
+                    <div class="form-field">
+                        <label for="arrival-location">Nơi đến</label><br>
+                        <select name="arrival-location" id="arrival-location">
+                            <option value=""></option>
+                            <option value="TPHCM">TPHCM</option>
+                            <option value="TPHCM2">TPHCM2</option>
+                            <option value="TPHCM3">TPHCM3</option>
+                            <option value="TPHCM4">TPHCM4</option>
+                            <option value="TPHCM5">TPHCM5</option>
+                        </select>
+                    </div>
+                    <div class="form-field" style="justify-content: right;">
+                        <button type="submit">Lọc</button>
+                    </div>
+                </form>
+                <div class="flight-search">
+                    <label for="flight-id">Tìm kiếm mã chuyến</label><br>
+                    <input type="text" id="flight-id" name="flight-id">
+                    <button class="search-flight">Tìm kiếm</button>
+                </div>
+                
+            </div>
+            <div class="flight-data-table">
+              <div class="table-container">
+                <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 flight-table">
+                  <ng-container matColumnDef="flight_id">
+                      <th mat-header-cell *matHeaderCellDef> Mã chuyến </th>
+                      <td mat-cell *matCellDef="let element"> {{element.flight_id}} </td>
+                    </ng-container>
+                  
+                    <ng-container matColumnDef="plane_id">
+                      <th mat-header-cell *matHeaderCellDef> Mã máy bay </th>
+                      <td mat-cell *matCellDef="let element"> {{element.plane_id}} </td>
+                    </ng-container>
+                  
+                    <ng-container matColumnDef="plane_name">
+                      <th mat-header-cell *matHeaderCellDef> Tên máy bay </th>
+                      <td mat-cell *matCellDef="let element"> {{element.plane_name}} </td>
+                    </ng-container>
+                  
+                    <ng-container matColumnDef="departure_location">
+                      <th mat-header-cell *matHeaderCellDef> Nơi xuất phát </th>
+                      <td mat-cell *matCellDef="let element"> {{element.departure_location}} </td>
+                    </ng-container>
+    
+                    <ng-container matColumnDef="arrival_location">
+                      <th mat-header-cell *matHeaderCellDef> Nơi hạ cánh </th>
+                      <td mat-cell *matCellDef="let element"> {{element.arrival_location}} </td>
+                    </ng-container>
+    
+                    <ng-container matColumnDef="departure_date">
+                      <th mat-header-cell *matHeaderCellDef> Ngày xuất phát </th>
+                      <td mat-cell *matCellDef="let element"> {{element.departure_date}} </td>
+                    </ng-container>
+    
+                    <ng-container matColumnDef="flight_time">
+                      <th mat-header-cell *matHeaderCellDef> Giờ bay </th>
+                      <td mat-cell *matCellDef="let element"> {{element.flight_time}} </td>
+                    </ng-container>
+    
+                    <ng-container matColumnDef="BSN_seats">
+                      <th mat-header-cell *matHeaderCellDef> Số ghế<br> BSN </th>
+                      <td mat-cell *matCellDef="let element"> {{element.BSN_seats}} </td>
+                    </ng-container>
+    
+                    <ng-container matColumnDef="ECO_seats">
+                      <th mat-header-cell *matHeaderCellDef> Số ghế <br> ECO </th>
+                      <td mat-cell *matCellDef="let element"> {{element.ECO_seats}} </td>
+                    </ng-container>
+    
+                    <ng-container matColumnDef="price">
+                      <th mat-header-cell *matHeaderCellDef> Giá </th>
+                      <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+                    </ng-container>
+  
+                    <ng-container matColumnDef="edit">
+                      <th mat-header-cell *matHeaderCellDef> </th>
+                      <td mat-cell *matCellDef="let element"> <button routerLink="/admin-dashboard/edit-flight" routerLinkActive="active">Sửa</button> </td>
+                    </ng-container>
+  
+                    <ng-container matColumnDef="delete">
+                      <th mat-header-cell *matHeaderCellDef> </th>
+                      <td mat-cell *matCellDef="let element"> <button>Xóa</button> </td>
+                    </ng-container>
+                
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+              </div>
+              
 
+
+              <div class="paginator-container">
+                <mat-paginator pageSize="10" hidePageSize="true"
+                  showFirstLastButtons>
+                </mat-paginator>
+              </div>
+
+              
+            </div>
+            
+              
+    <!-- </div>
+</div> -->
